--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,13 @@
     <link rel="stylesheet" href="main.css">
     <title>Sass Tutorial</title>
 </head>
+
 <body>
-    
+    <div class="main">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi optio repudiandae
+            minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
+        </p>
+    </div>
 </body>
+
 </html>
