--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi optio repudiandae
+        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi optio repudiandae
             minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
         </p>
     </div>
