--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi optio repudiandae
             minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
         </p>
+        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi optio repudiandae
+            minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
+        </p>
     </div>
 </body>
 
