Create light class and add to body element

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <title>Sass Tutorial</title>
 </head>
 
-<body>
+<body class="light">
     <div class="main">
-        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi optio repudiandae
+        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi
+            optio repudiandae
             minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
         </p>
-        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi optio repudiandae
+        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi
+            optio repudiandae
             minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
         </p>
     </div>
