--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body class="light">
     <div class="main">
-        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi
+        <p class="main_paragraph1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi
             optio repudiandae
             minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
         </p>
-        <p class="main_paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi
+        <p class="main_paragraph2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam neque alias id nisi
             optio repudiandae
             minima esse quam dolorem nobis voluptates obcaecati porro recusandae amet incidunt, ad hic? A, doloremque!
         </p>
